@@ -8,6 +8,7 @@ lib/fstrcmp.c
 Depends-on:
 lock
 tls
+minmax
 xalloc
 
 configure.ac:
